<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iBreathe Sports</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register!</string>
    <string name="trademark">iBreathe</string>
    <string name="action_sign_in">Sign In</string>
    <string name="title_activity_home">iBreathe Sports</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="share_perf_key">share_perf_key</string>
    <string name="registered_flag">registered</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_conf_pass">The passwords dont match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_sign_up">SIGN UP</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_card">Add Card</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="PickUp">Pick Up</string>
    <string name="Sport">Sport</string>
    <string name="Public">Public</string>
    <string name="Free">Free</string>
    <string name="label_send">Send</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>

    <string-array name="Min">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="Max">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="typeOfGame">
        <item>Pick Up</item>
        <item>Tournament</item>
        <item>League</item>
    </string-array>
    <string-array name="gameType">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string-array name="sport_spinner">
        <item>Soccer</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Baseball</item>
        <item>Softball</item>
        <item>Pin pong</item>
        <item>Badminton</item>
        <item>Football</item>
    </string-array>
    <string-array name="gameTypeCost">
        <item>Free</item>
        <item>Paid</item>
    </string-array>

    <string name="title_activity_become_organizer">BecomeOrganizer</string>
    <string name="title_activity_organizer_setup">OrganizerSetup</string>
    <string name="title_activity_event_home">Event</string>
    <string name="iBreatheLegal">        iBreathe Inc Organizer
    Legal Agreements.
    Stuff that you never read.
    Please read it now.
    Accept at the end.</string>
    <string name="title_activity_payout_method">PayoutMethod</string>
    <string name="title_activity_create_event_demo">CreateEventDemo</string>
    <string name="title_activity_organizer_home">OrganizerHome</string>
    <string name="title_activity_event_dashboard">EventDashboard</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="fb_login">fb_login</string>
    <string name="facebook_app_id">881146998594574</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_websearch">Event search</string>

    <string-array name="menu_items">
        <item>My Events</item>
        <item>Profile</item>
        <item>Payment</item>
        <item>Organize</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment_main">Payment</string>
    <string name="title_activity_launcher">iBreathe Sports</string>
    <string name="desc_content">NASA has a great soccer pitch where we meet every wednesday.\nJoin us this wednesday.\nIdeally we would want 10 players to play</string>
    <string name="title_activity_profile_view">Profile</string>
    <string name="title_activity_chat_main">ChatMain</string>
    <string name="title_activity_venue_home">VenueHome</string>
    <string name="title_activity_create_profile">CreateProfile</string>

</resources>
